tests/expectations/compiler/constructor/admin_constructor_with_bad_address.out
Error [ETYC0372156]: Invalid address in `@admin` annotation: `Invalid account address length: found 61, expected 63`.
    --> compiler-test:8:5
     |
   8 |     @admin(address = "aleo1rhgdu77hgyqd3xjj8ucu3jj9r2krwz6mnzyd80gncr5fxcwlh5rsvzpx")
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   9 |     constructor() {}
     |     ^^^^^^^^^^^^^^^^
